# wikinewsbot

./: .gitignore  README.md  stack.yaml  wikinewsbot.cabal
src/: Main.hs  RedditHelper.hs  Types.hs  Webscraper.hs
