name:                wikinewsbot
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/wikinewsbot#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable wikinewsbot
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Types, Webscraper, RedditHelper
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, reddit >= 0.2.1 && < 0.3, text,
                       time, http-conduit, bytestring, html-conduit, xml-conduit,
                       containers, directory, transformers, reddit
